@@ -81,6 +81,7 @@ readline.have_var("rl_library_version")
 readline.have_var("rl_editing_mode")
 readline.have_var("rl_line_buffer")
 readline.have_var("rl_point")
+readline.have_var("rl_char_is_quoted_p")
 # workaround for native windows.
 /mswin|bccwin|mingw/ !~ RUBY_PLATFORM && readline.have_var("rl_event_hook")
 /mswin|bccwin|mingw/ !~ RUBY_PLATFORM && readline.have_var("rl_catch_sigwinch")
